Added threads option. Removed the dependency on the esvee module.